--- a/app/dashboard/templates/dashboard/refused_email.html
+++ b/app/dashboard/templates/dashboard/refused_email.html
@@ -59,6 +59,8 @@
           <a href="{{ refused_email.get_url() }}" download
              class="mt-4">Download →</a>
           <div class="small-text">This will download a ".eml" file that you can open in your email client</div>
+
+          <a href="{{ url_for('dashboard.email_viewer_route', email_log_id=email_log.id) }}">View</a>
         {% endif %}
 
       </div>
